--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,3 +1,12 @@
 :root {
+	--black: #040301;
+	--black-2: #1b1407;
+	--gray: #3d372c;
+	--gray-2: #5a554b;
+	--beidg: #c0b3a7;
+	--bg: #f3f0eb;
+	--bg-2: #fdfcfb;
+	--pure-white: #fff;
 
+    --font-family: "Inter", sans-serif;
 }
