--- a/css/main.css
+++ b/css/main.css
@@ -28,4 +28,224 @@ img {
   width: 375px;
   padding: 80px 16px;
   margin: 0 auto;
+  background-color: var(--bg);
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .container__gray {
+    width: 744px;
+    padding: 120px 40px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .container__gray {
+    width: 1440px;
+    padding: 160px 80px;
+  }
+}
+
+.container__white {
+  width: 375px;
+  padding: 48px 16px;
+  margin: 0 auto;
+  background-color: var(--bg);
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .container__white {
+    width: 744px;
+    padding: 48px 40px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .container__white {
+    width: 1440px;
+    padding: 80px 80px;
+  }
+}
+
+.title {
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 100%;
+  text-transform: uppercase;
+  color: var(--black);
+  margin-bottom: 12px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .title {
+    font-size: 64px;
+    margin-bottom: 18px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .title {
+    font-size: 96px;
+    margin-bottom: 16px;
+  }
+}
+
+.text {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 140%;
+  color: var(--black-2);
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .text {
+    font-size: 18px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .text {
+    font-size: 18px;
+  }
+}
+
+:root {
+  --black: #040301;
+  --black-2: #1b1407;
+  --gray: #3d372c;
+  --gray-2: #5a554b;
+  --beidg: #c0b3a7;
+  --bg: #f3f0eb;
+  --bg-2: #fdfcfb;
+  --pure-white: #fff;
+  --font-family: "Inter", sans-serif;
+}
+
+.container__header {
+  display: flex;
+  width: 375px;
+  padding: 20px 16px;
+  margin: 0 auto;
+  background-color: var(--bg);
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--beidg);
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .container__header {
+    width: 744px;
+    padding: 20px 40px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .container__header {
+    width: 1440px;
+    padding: 22px 80px;
+  }
+}
+
+.logo {
+  width: 150px;
+  height: 18px;
+  margin-top: 3px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .logo {
+    width: 209px;
+    height: 25px;
+    margin-top: 3px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .logo {
+    width: 209px;
+    height: 25px;
+    margin-top: 3px;
+  }
+}
+
+.header__navigation {
+  display: none;
+}
+@media screen and (min-width: 1440px) {
+  .header__navigation {
+    display: flex;
+    flex-direction: row;
+    gap: 32px;
+    margin-left: 344px;
+  }
+}
+
+.header__phone {
+  margin-left: 50px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .header__phone {
+    margin-left: 72px;
+  }
+}
+
+.header__instagram {
+  display: none;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .header__instagram {
+    display: block;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .header__instagram {
+    display: block;
+  }
+}
+
+.header__button-form {
+  display: none;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .header__button-form {
+    display: block;
+    border: 2px solid var(--beidg);
+    border-radius: 24px;
+    padding: 10px 16px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .header__button-form {
+    display: block;
+    border: 2px solid var(--beidg);
+    border-radius: 24px;
+    padding: 10px 16px;
+  }
+}
+
+.header__button-menu {
+  border: none;
+}
+@media screen and (min-width: 1440px) {
+  .header__button-menu {
+    display: none;
+  }
+}
+
+.mob__menu {
+  width: 24px;
+  height: 24px;
+}
+
+.header__text {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 140%;
+  color: var(--black-2);
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .header__text {
+    font-size: 16px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .header__text {
+    font-size: 16px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .hero__title-span {
+    margin-left: 217px;
+  }
 }/*# sourceMappingURL=main.css.map */
