--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -61,3 +61,15 @@
         
     }
 }
+.text__link{
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 120%;
+    text-transform: uppercase;
+    color: var(--pure-white);
+}
+
+.button__svg{
+    margin-left: 8px;
+}
