--- a/css/main.css
+++ b/css/main.css
@@ -319,20 +319,127 @@ img {
   }
 }
 
-.hero_image {
-  width: 375px;
-  height: 529px;
+.picture__container {
+  position: relative;
   margin: 0 auto;
+  width: 375px;
 }
 @media screen and (min-width: 744px) and (max-width: 1439px) {
-  .hero_image {
+  .picture__container {
+    width: 744px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .picture__container {
+    width: 1440px;
+  }
+}
+
+.picture__img {
+  width: 375px;
+  height: 529px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .picture__img {
     width: 744px;
     height: 624px;
   }
 }
 @media screen and (min-width: 1440px) {
-  .hero_image {
+  .picture__img {
     width: 1440px;
     height: 533px;
+  }
+}
+
+.picture__blocks {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 12px;
+  border: 2px solid rgba(255, 255, 255, 0.1);
+  border-radius: 24px;
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.block-1 {
+  display: none;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .block-1 {
+    display: flex;
+    position: absolute;
+    top: 120px;
+    left: 40px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .block-1 {
+    display: flex;
+    position: absolute;
+    top: 90px;
+    left: 100px;
+  }
+}
+
+.block-2 {
+  display: none;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .block-2 {
+    display: flex;
+    position: absolute;
+    top: 218px;
+    left: 120px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .block-2 {
+    display: flex;
+    position: absolute;
+    top: 190px;
+    left: 333px;
+  }
+}
+
+.block-3 {
+  display: none;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .block-3 {
+    display: flex;
+    position: absolute;
+    top: 410px;
+    left: 150px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .block-3 {
+    display: flex;
+    position: absolute;
+    top: 295px;
+    left: 545px;
+  }
+}
+
+.block-4 {
+  display: none;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .block-4 {
+    display: flex;
+    position: absolute;
+    top: 310px;
+    left: 40px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .block-4 {
+    display: flex;
+    position: absolute;
+    top: 380px;
+    left: 100px;
   }
 }/*# sourceMappingURL=main.css.map */
