--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,4 +6,7 @@
 @import './layouts/header.scss';
 @import './layouts/section-hero.scss';
 @import './layouts/section-picture.scss';
+@import './layouts/section-help.scss';
+@import './layouts/section-advantages.scss';
+
 
