--- a/css/main.css
+++ b/css/main.css
@@ -321,6 +321,23 @@ img {
   }
 }
 
+.hero__container {
+  padding-top: 58px;
+  padding-bottom: 24px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .hero__container {
+    padding-top: 66px;
+    padding-bottom: 50px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .hero__container {
+    padding-top: 102px;
+    padding-bottom: 48px;
+  }
+}
+
 @media screen and (min-width: 1440px) {
   .hero__title-span {
     margin-left: 217px;
@@ -547,18 +564,38 @@ img {
 }
 
 .advantages__container {
+  position: relative;
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  align-items: end;
+  padding-top: 24px;
 }
 @media screen and (min-width: 744px) and (max-width: 1439px) {
   .advantages__container {
-    gap: 20px;
+    padding-top: 32px;
   }
 }
 @media screen and (min-width: 1440px) {
   .advantages__container {
+    padding-top: 32px;
+  }
+}
+
+.advantages__list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  margin-bottom: 16px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .advantages__list {
     gap: 20px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .advantages__list {
+    gap: 20px;
+    margin-bottom: 40px;
   }
 }
 
@@ -567,8 +604,19 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  width: 100%;
   padding: 48px 12px 12px 12px;
   background-color: var(--bg-2);
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .advantages__article {
+    width: 322px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .advantages__article {
+    width: 413px;
+  }
 }
 
 .advantages__svg {
@@ -578,8 +626,32 @@ img {
 }
 
 .advantages__link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   border: 2px solid var(--beidg);
   border-radius: 24px;
-  padding: 10px 16px;
+  padding: 10px 12px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .advantages__link {
+    position: absolute;
+    width: 138px;
+    bottom: 135px;
+    right: 43px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .advantages__link {
+    width: 194px;
+  }
+}
+
+.advantages__text {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 140%;
+  color: var(--black-2);
 }/*# sourceMappingURL=main.css.map */
