--- a/sass/layouts/_section-advantages.scss
+++ b/sass/layouts/_section-advantages.scss
@@ -1,12 +1,28 @@
 .advantages__container{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    padding-top: 24px;
+    @include tablet{
+        padding-top: 32px;
+    }
+    @include desktop{
+         padding-top: 32px;
+    }
+}
+.advantages__list{
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   gap: 16px;
+  margin-bottom: 16px;
   @include tablet{
+   
     gap: 20px;
   }
   @include desktop{
      gap: 20px;
+     margin-bottom: 40px;
   }
 }
 .advantages__article{
@@ -14,8 +30,15 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    width: 100%;
     padding: 48px 12px 12px 12px;
     background-color: var(--bg-2);
+    @include tablet{
+        width: 322px;  
+    }
+    @include desktop{
+        width: 413px;
+    }
 }
 .advantages__svg{
     position: absolute;
@@ -24,8 +47,27 @@
 }
 
 .advantages__link{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     border: 2px solid var(--beidg);
     border-radius: 24px;
-    padding: 10px 16px;
+    padding: 10px 12px;
+    @include tablet{ 
+        position: absolute;
+        width: 138px;
+        bottom: 135px;
+        right: 43px;    
+    }
+    @include desktop{
+        width: 194px;
+    }
+}
+.advantages__text{
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 140%;
+    color: var(--black-2);
 }
