--- a/sass/layouts/_section-hero.scss
+++ b/sass/layouts/_section-hero.scss
@@ -1,3 +1,15 @@
+.hero__container{
+    padding-top: 58px;
+    padding-bottom: 24px;
+    @include tablet{
+         padding-top: 66px;
+         padding-bottom: 50px;
+    }
+    @include desktop{
+        padding-top: 102px;
+         padding-bottom: 48px;
+    }
+}
 .hero__title-span{
     @include desktop{
         margin-left: 217px;
@@ -14,7 +26,7 @@
     @include desktop{
      width: 407px;
      margin-left: 237px;
-      margin-bottom: 0;
+    margin-bottom: 0;
     }
 }
 .hero__button{
