--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,7 @@ img {
   width: 375px;
   padding: 48px 16px;
   margin: 0 auto;
-  background-color: var(--bg);
+  background-color: var(--bg-2);
 }
 @media screen and (min-width: 744px) and (max-width: 1439px) {
   .container__white {
@@ -166,17 +166,21 @@ img {
 }
 @media screen and (min-width: 744px) and (max-width: 1439px) {
   .text__article {
-    font-size: 18px;
+    font-size: 16px;
   }
 }
 @media screen and (min-width: 1440px) {
   .text__article {
-    font-size: 18px;
+    font-size: 16px;
   }
 }
 
 .button__svg {
   margin-left: 8px;
+}
+
+.black {
+  color: var(--black);
 }
 
 :root {
@@ -654,4 +658,125 @@ img {
   font-size: 16px;
   line-height: 140%;
   color: var(--black-2);
+}
+
+.solve__container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.solve__subtitle {
+  padding: 0px 0px 16px 0px;
+  border-bottom: 1px solid var(--beidg);
+  margin-bottom: 24px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .solve__subtitle {
+    margin-bottom: 32px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .solve__subtitle {
+    width: 100%;
+    margin-bottom: 32px;
+  }
+}
+
+.solve__list {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  margin-bottom: 32px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .solve__list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-bottom: 40px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .solve__list {
+    flex-direction: row;
+    gap: 20px;
+    margin-bottom: 64px;
+  }
+}
+
+.solve__article {
+  background-color: var(--bg);
+  padding: 12px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .solve__article {
+    padding: 16px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .solve__article {
+    width: 305px;
+    padding: 16px;
+  }
+}
+
+.solve__number {
+  font-family: var(--font-family);
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 120%;
+  text-transform: uppercase;
+  text-align: right;
+  color: var(--beidg);
+  margin-bottom: 16px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .solve__number {
+    margin-bottom: 24px;
+  }
+}
+
+.solve__text {
+  font-family: var(--font-family);
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 120%;
+  text-transform: uppercase;
+  color: var(--gray-2);
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .solve__text {
+    font-size: 24px;
+    width: 322px;
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .solve__text {
+    font-size: 24px;
+    margin-bottom: 0;
+  }
+}
+
+.solve__button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  border-radius: 32px;
+  border: none;
+  background-color: var(--black);
+  padding: 14px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .solve__button {
+    width: 184px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .solve__button {
+    width: 184px;
+  }
 }/*# sourceMappingURL=main.css.map */
