--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -17,7 +17,7 @@
     width: 375px;
     padding: 48px 16px;
     margin: 0 auto;
-    background-color: var(--bg);
+    background-color: var(--bg-2);
     @include tablet{
         width: 744px;
         padding: 48px 40px;
@@ -112,13 +112,16 @@
     line-height: 140%;
     color: var(--gray-2);
     @include tablet{
-        font-size: 18px;
+        font-size: 16px;
     }
     @include desktop{
-        font-size: 18px;
+        font-size: 16px;
     }
 }
 
 .button__svg{
     margin-left: 8px;
+}
+.black{
+    color: var(--black);
 }
