--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,5 +8,7 @@
 @import './layouts/section-picture.scss';
 @import './layouts/section-help.scss';
 @import './layouts/section-advantages.scss';
+@import './layouts/sections-solve.scss';
+
 
 
