--- a/css/main.css
+++ b/css/main.css
@@ -779,4 +779,9 @@ img {
   .solve__button {
     width: 184px;
   }
+}
+
+.works_subtitle {
+  padding-bottom: 16px;
+  border-bottom: 1px solid var(--beidg);
 }/*# sourceMappingURL=main.css.map */
