--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,8 @@
 @import './layouts/section-picture.scss';
 @import './layouts/section-help.scss';
 @import './layouts/section-advantages.scss';
-@import './layouts/sections-solve.scss';
+@import './layouts/section-solve.scss';
+@import './layouts/section-works.scss';
 
 
 
