--- a/css/main.css
+++ b/css/main.css
@@ -793,8 +793,8 @@ img {
 }
 @media screen and (min-width: 1440px) {
   .works__container {
-    flex-direction: column;
-    align-items: start;
+    flex-direction: row;
+    align-items: center;
   }
 }
 
@@ -807,10 +807,17 @@ img {
 .works__text__container {
   display: flex;
   flex-direction: column;
-  width: 410px;
+  width: 100%;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .works__text__container {
+    width: 410px;
+    margin-bottom: 20px;
+  }
 }
 @media screen and (min-width: 1440px) {
   .works__text__container {
+    width: 410px;
     margin-bottom: 40px;
   }
 }
@@ -859,11 +866,41 @@ img {
 }
 
 .works__button {
-  width: 230px;
+  width: 100%;
   height: 52px;
+  margin-bottom: 20px;
 }
 @media screen and (min-width: 744px) and (max-width: 1439px) {
   .works__button {
+    width: 230px;
     margin-left: 20px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .works__button {
+    width: 230px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .swiper {
+    width: 847px;
+  }
+}
+
+.works__block {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .works__block {
+    flex-direction: row;
+    align-items: end;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .works__block {
+    width: 410px;
   }
 }/*# sourceMappingURL=main.css.map */
