--- a/sass/layouts/_section-works.scss
+++ b/sass/layouts/_section-works.scss
@@ -3,9 +3,12 @@
     flex-direction: row;
     flex-wrap: wrap;
     align-items: end;
+    @include tablet{
+
+    }
     @include desktop{
-        flex-direction: column;
-        align-items: start;
+        flex-direction: row;
+        align-items: center;
     }
 
 }
@@ -18,8 +21,13 @@
 .works__text__container{
     display: flex;
     flex-direction: column;
-    width: 410px;
+    width: 100%;
+    @include tablet{
+        width: 410px;
+        margin-bottom: 20px;
+    }
     @include desktop{
+        width: 410px;
         margin-bottom: 40px;
     }
 }
@@ -54,9 +62,32 @@
     }
 }
 .works__button{
-    width: 230px;
+    width: 100%;
     height: 52px;
+    margin-bottom: 20px;
     @include tablet{
+        width: 230px;
         margin-left: 20px;
     }
+    @include desktop{
+        width: 230px;
+    }
+}
+.swiper{
+    @include desktop{
+        width: 847px;
+    }
+}
+.works__block{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    @include tablet{
+        flex-direction: row;
+        align-items: end;
+    }
+    @include desktop{
+         width: 410px;
+    }
+    
 }
