--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,9 @@
 @import './layouts/section-advantages.scss';
 @import './layouts/section-solve.scss';
 @import './layouts/section-works.scss';
+@import './layouts/section-testimonials.scss';
+@import './layouts/modal.scss';
+@import './layouts/form-review.scss';
 
 
 
