--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -122,9 +122,7 @@
 .button__svg{
     margin-left: 8px;
 }
-.black{
-    color: var(--black);
-}
+
 .solve__text{
     font-family: var(--font-family);
     font-weight: 600;
@@ -145,4 +143,10 @@
 }
 .black__2{
     color: var(--black-2);
+}
+.black{
+    color: var(--black);
+}
+.pure-white{
+    color: var(--pure-white);
 }
