--- a/sass/layouts/_form-review.scss
+++ b/sass/layouts/_form-review.scss
@@ -1,10 +1,17 @@
 .form{
     position: relative;
-    width: 344px;
-    padding: 16px;
-    border-radius: 24px;
-    background-color: var(--white);
-    margin: 0 auto;
+    border: 2px solid rgba(255, 255, 255, 0.1);
+    border-radius: 8px;
+    padding: 12px;
+    width: 343px;
+    backdrop-filter: blur(20px);
+    background-color: rgba(0, 0, 0, 0.2);
+    // height: 334px;
+    // width: 34px;
+    // padding: 12px;
+    // border-radius: 24px;
+    // background-color: var(--white);
+    // margin: 0 auto;
     // @include tablet{
     //     width: 648px;
     //     padding: 24px;
@@ -17,18 +24,21 @@
 }
 .form__container{
      display: flex;
+     width: 100%;
     flex-wrap: wrap;
     margin-bottom: 32px;
 }
 
-.input{
+.input,
+.textarea{
     display: flex;
-    justify-content: center;
-    border: 1px solid var(--grey-light);
-    border-radius: 24px;
-    padding: 12px 24px;
+    border: none;
+    border-bottom: 1px solid var(--pure-white);
+    padding: 8px 0px;
     width: 100%;
-    margin-bottom: 20px;
+    background-color: transparent;
+      // margin-bottom: 20px;
+  
     // @include tablet{
     //     width: 281px;
     //     margin-right: 20px;
@@ -40,32 +50,55 @@
     //     margin-bottom: 32px;
     // }
 }
-.input::placeholder{
-    color: var(--black);
+.input::placeholder,
+.textarea::placeholder
+{   align-content: start;
+    color: var(--pure-white);
+   
+}
+.input:focus,
+.textarea:focus{
+    border: none;
+    outline: none;
 }
 .input:nth-child(even){
     margin-right: 0;
 }
-.textarea{
-     border: 1px solid var(--grey-light);
-    border-radius: 24px;
-    padding: 12px 24px;
-    width: 100%;
-    height: 104px; 
-}
-.textarea::placeholder{
+// .textarea{
+//     border: 1px solid var(--grey-light);
+//     border-radius: 24px;
+//     padding: 12px 24px;
+//     width: 100%;
+//     height: 104px; 
+// }
+// .textarea::placeholder{
+//     color: var(--pure-white);
+// }
+.form__text{
+    font-family: var(--font3);
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 140%;
+    // text-align: center;
     color: var(--black);
 }
 .button{
-     border: 2px solid var(--black);
-    background-color: var(--black);
     width: 100%;
-    color: var(--white);
-    padding: 16px;
+    padding: 14px;
+    background-color: var(--beidg);
+    border: 2px solid var(--beidg);;
+    border-radius: 32px;
+  
+    color: var(--black-2);
 }
 .button:hover,
 .button:focus{
-    background-color: var(--white);
-    color: var(--black);
-    border: 2px solid var(--grey-light);
+    cursor: pointer;
+    border: 2px solid var(--pure-white);
+    // background-color: var(--white);
+    // color: var(--black);
+    // border: 2px solid var(--grey-light);
+}
+.form__svg{
+    fill: var(--pure-white);
 }
