--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -10,10 +10,10 @@
     transition-duration: 250ms;
     transition-timing-function: linear;
     overflow-y: scroll;
-    @include desktop{
-        overflow: hidden;
+    // @include desktop{
+    //     overflow: hidden;
 
-    }
+    // }
 }
 .is-hidden {
     opacity: 0;
@@ -25,21 +25,21 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-49.5%,-10%) ;
-    @include tablet{
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-22%) ;
-    }
-    @include desktop{
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-45%) ;
-    }
+    transform: translate(-50%,-50%) ;
+    // @include tablet{
+    //     top: 50%;
+    //     left: 50%;
+    //     transform: translate(-50%,-22%) ;
+    // }
+    // @include desktop{
+    //     top: 50%;
+    //     left: 50%;
+    //     transform: translate(-50%,-45%) ;
+    // }
 }
 .modal__container{
     position: relative;
-    width: 630px;
+    // width: 630px;
     // @include tablet{
     //     width: 630px;
     // }
@@ -49,7 +49,7 @@
 }
 .button__close{
     position: absolute;
-    z-index: 10;
+    z-index: 100;
     top: 0;
     right: 0;
     padding: 0;
