--- a/sass/layouts/_form-review.scss
+++ b/sass/layouts/_form-review.scss
@@ -1,5 +1,5 @@
 .form{
-    position: relative;
+    // position: relative;
     border: 2px solid rgba(255, 255, 255, 0.1);
     border-radius: 8px;
     padding: 12px;
