--- a/sass/layouts/_form-review.scss
+++ b/sass/layouts/_form-review.scss
@@ -1,32 +1,24 @@
 .form{
-    // position: relative;
     border: 2px solid rgba(255, 255, 255, 0.1);
     border-radius: 8px;
     padding: 12px;
     width: 343px;
     backdrop-filter: blur(20px);
     background-color: rgba(0, 0, 0, 0.2);
-    // height: 334px;
-    // width: 34px;
-    // padding: 12px;
-    // border-radius: 24px;
-    // background-color: var(--white);
-    // margin: 0 auto;
-    // @include tablet{
-    //     width: 648px;
-    //     padding: 24px;
-    // }
-    // @include desktop{
-    //     width: 630px;
-    //     border-radius: 24px;
-    //     padding: 24px;
-    // }
+    @include tablet{
+        width: 322px;
+        padding: 16px;
+    }
+    @include desktop{
+        width: 413px;
+         padding: 16px;
+    }
 }
 .form__container{
      display: flex;
      width: 100%;
-    flex-wrap: wrap;
-    margin-bottom: 32px;
+     flex-wrap: wrap;
+     margin-bottom: 32px;
 }
 
 .input,
@@ -34,21 +26,12 @@
     display: flex;
     border: none;
     border-bottom: 1px solid var(--pure-white);
-    padding: 8px 0px;
+    padding: 20px 32px 8px 32px;
     width: 100%;
     background-color: transparent;
-      // margin-bottom: 20px;
-  
-    // @include tablet{
-    //     width: 281px;
-    //     margin-right: 20px;
-    //     margin-bottom: 32px;
-    // }
-    // @include desktop{
-    //     width: 281px;
-    //     margin-right: 20px;
-    //     margin-bottom: 32px;
-    // }
+    @include desktop{
+      padding: 20px 32px 8px 36px;
+    }
 }
 .input::placeholder,
 .textarea::placeholder
@@ -64,25 +47,18 @@
 .input:nth-child(even){
     margin-right: 0;
 }
-// .textarea{
-//     border: 1px solid var(--grey-light);
-//     border-radius: 24px;
-//     padding: 12px 24px;
-//     width: 100%;
-//     height: 104px; 
-// }
-// .textarea::placeholder{
-//     color: var(--pure-white);
-// }
+
 .form__text{
     font-family: var(--font3);
     font-weight: 300;
     font-size: 16px;
     line-height: 140%;
-    // text-align: center;
-    color: var(--black);
+    color: var(--pure-white);
 }
 .button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     padding: 14px;
     background-color: var(--beidg);
@@ -95,10 +71,34 @@
 .button:focus{
     cursor: pointer;
     border: 2px solid var(--pure-white);
-    // background-color: var(--white);
-    // color: var(--black);
-    // border: 2px solid var(--grey-light);
 }
-.form__svg{
-    fill: var(--pure-white);
+.form__button-svg{
+    margin-left: 8px;
+}
+
+.input__user-svg{
+    position: absolute;
+    top: 77px;
+    left: 10px;
+    @include tablet{
+      top: 67px;
+      left: 12px;
+    }
+    @include desktop{
+        top: 62px;
+        left: 14px;
+    }
+}
+.input__phone-svg{
+    position: absolute;
+    top: 127px;
+    left: 10px;
+    @include tablet{
+       top: 116px;
+       left: 14px;
+    }
+    @include desktop{
+        top: 110px;
+        left: 14px;
+    }
 }
