--- a/sass/layouts/_section-testimonials.scss
+++ b/sass/layouts/_section-testimonials.scss
@@ -1,14 +1,30 @@
-.testimonial__list{
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   gap: 20px;
+.testimonial__container{
+    position: relative;
+}
 
 
+// .testimonial__list{
+//    display: flex;
+//    align-items: center;
+//    justify-content: center;
+//    gap: 20px;
+
+
+// }
+.testimonialSwiper{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    justify-content: center;
 }
 .testimonials__item{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-between;
     width: 100%;
     height: 185px;
+    padding: 24px 12px 12px 12px;
     background-color: var(--bg);
     @include tablet{
         width: 322px;
@@ -18,9 +34,45 @@
     }
 }
 .testimonials__button{
-  border: 2px solid var(--beidg);
-  border-radius: 24px;
-  padding: 10px 0;
-  width: 132px;
+    position: absolute;
+    bottom: 24px;
+    left: 12px;
+    border: 2px solid var(--beidg);
+    border-radius: 24px;
+    padding: 10px 0;
+    width: 132px;
+    @include tablet{
+        position: absolute;
+        bottom: 330px;
+        left: 570px;
+    }
+    @include desktop{
+        position: absolute;
+        bottom: 380px;
+        left: 1230px;
+    }
  
+}
+.testimonial__text{
+    font-size: 12px;
+}
+// .testimonial__next{
+//     position: absolute;
+//     // z-index: 10px;
+//     // bottom: -25px;
+//     right: 10px;
+
+// }
+// .testimonial__prev{
+//     position: absolute;
+//     z-index: 10;
+//     // bottom: -25px;
+//     right: 0;
+
+// }
+
+.testimonial__button-container{
+    display: flex;
+    flex-direction: row;
+    margin-top: 24px;
 }
