--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -37,16 +37,16 @@
     //     transform: translate(-50%,-45%) ;
     // }
 }
-.modal__container{
-    position: relative;
-    // width: 630px;
-    // @include tablet{
-    //     width: 630px;
-    // }
-    // @include desktop{
-    //     width: 630px;
-    // }
-}
+// .modal__container{
+//     position: relative;
+//     width: 630px;
+//     @include tablet{
+//         width: 630px;
+//     }
+//     @include desktop{
+//         width: 630px;
+//     }
+// }
 .button__close{
     position: absolute;
     z-index: 100;
