--- a/css/main.css
+++ b/css/main.css
@@ -982,6 +982,7 @@ img {
   flex-direction: column;
   align-items: end;
   justify-content: center;
+  width: 100%;
 }
 
 .testimonials__item {
@@ -991,17 +992,19 @@ img {
   justify-content: space-between;
   width: 100%;
   height: 185px;
-  padding: 24px 12px 12px 12px;
+  padding: 12px 12px 12px 12px;
   background-color: var(--bg);
 }
 @media screen and (min-width: 744px) and (max-width: 1439px) {
   .testimonials__item {
     width: 322px;
+    height: 250px;
   }
 }
 @media screen and (min-width: 1440px) {
   .testimonials__item {
     width: 413px;
+    height: 200px;
   }
 }
 
@@ -1017,14 +1020,14 @@ img {
 @media screen and (min-width: 744px) and (max-width: 1439px) {
   .testimonials__button {
     position: absolute;
-    bottom: 330px;
+    bottom: 400px;
     left: 570px;
   }
 }
 @media screen and (min-width: 1440px) {
   .testimonials__button {
     position: absolute;
-    bottom: 380px;
+    bottom: 395px;
     left: 1230px;
   }
 }
@@ -1066,10 +1069,6 @@ img {
   transform: translate(-50%, -50%);
 }
 
-.modal__container {
-  position: relative;
-}
-
 .button__close {
   position: absolute;
   z-index: 100;
@@ -1105,13 +1104,13 @@ img {
 }
 @media screen and (min-width: 744px) and (max-width: 1439px) {
   .form {
-    width: 322px;
+    width: 382px;
     padding: 16px;
   }
 }
 @media screen and (min-width: 1440px) {
   .form {
-    width: 413px;
+    width: 423px;
     padding: 16px;
   }
 }
@@ -1158,6 +1157,10 @@ img {
 
 .input:nth-child(even) {
   margin-right: 0;
+}
+
+.testimonials__textarea {
+  height: 100px;
 }
 
 .form__text {
