--- a/sass/layouts/_section-testimonials.scss
+++ b/sass/layouts/_section-testimonials.scss
@@ -16,6 +16,7 @@
     flex-direction: column;
     align-items: end;
     justify-content: center;
+    width: 100%;
 }
 .testimonials__item{
     display: flex;
@@ -24,13 +25,15 @@
     justify-content: space-between;
     width: 100%;
     height: 185px;
-    padding: 24px 12px 12px 12px;
+    padding: 12px 12px 12px 12px;
     background-color: var(--bg);
     @include tablet{
         width: 322px;
+        height: 250px;
     }
     @include desktop{
         width: 413px;
+        height: 200px;
     }
 }
 .testimonials__button{
@@ -43,12 +46,12 @@
     width: 132px;
     @include tablet{
         position: absolute;
-        bottom: 330px;
+        bottom: 400px;
         left: 570px;
     }
     @include desktop{
         position: absolute;
-        bottom: 380px;
+        bottom: 395px;
         left: 1230px;
     }
  
