--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,6 @@
 @import './layouts/section-testimonials.scss';
 @import './layouts/modal.scss';
 @import './layouts/form-review.scss';
-
+@import './layouts/section-running.scss';
 
 
