--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,5 +14,7 @@
 @import './layouts/modal.scss';
 @import './layouts/form-review.scss';
 @import './layouts/section-running.scss';
+@import './layouts/section-questions.scss';
+
 
 
